# ic-device-llm

./: .gitignore  README.md  pyproject.toml
notebooks/: dataprocessing.ipynb  deposition_data_process.ipynb  openai_evlaution.ipynb  openai_fintune.ipynb
src/ic_device_llm/: schemas.py
src/ic_device_llm/configs/: path_config.py
src/ic_device_llm/dataset/: build_dataset.py  lettrbox_deposition_dataset.py
src/ic_device_llm/prompts/: dataset_prompt.py
src/ic_device_llm/utils/: deposition_data_utils.py  json_utils.py  sampling_utils.py
src/ic_device_llm/utils/data/: augmentation.py
