[project]
name = "ic-device-llm"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "LiDing", email = "72634327+linkedlist771@users.noreply.github.com"},
]
dependencies = [
    "matplotlib>=3.9.1",
    "notebook>=7.2.1",
    "numpy>=2.0.0",
    "pandas>=2.2.2",
    "scipy>=1.14.0",
    "pydantic>=2.8.2",
    "tqdm>=4.66.4",
    "openai>=1.35.14",
    "loguru>=0.7.2",
    "jupyter>=1.0.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
verify_ssl = true